Tests extended and errors repaired in: - ConstantFloat (loaded an int instead of a float on the stack... ahem...) - GOTOW (renamed into GOTO_W as it should be called) - ICONST_m1 (renamed into ICONST_M1 as it should be called) - IF_ICMPNE (had a small copy/paste error) - INVOKEDYNAMIC (was missing, and is right now a copy of INVOKESTATIC -- will be repaired later) - InterpreterFactory (to include INVOKEDYNAMIC)