@@ -7,7 +7,7 @@
 		<artifactId>dsol</artifactId>
 		<version>3.0.0</version>
 	</parent>
-	
+
 	<artifactId>dsol-base</artifactId>
 	<name>DSOL version 3, base classes</name>
 	<description>Base classes for Distributed Simulation Object Library version 3</description>
@@ -18,16 +18,47 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>java3d</groupId>
 			<artifactId>vecmath</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>java3d</groupId>
 			<artifactId>j3d-core</artifactId>
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>instrument</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<argLine>-XX:MaxPermSize=4096m
+						-Xmx4096m</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
+	<reporting>
+		<!-- Cobertura test coverage report -->
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
